fix z-index issue

--- a/src/main/webapp/less/90_project.less
+++ b/src/main/webapp/less/90_project.less
@@ -1318,10 +1318,9 @@ th.normal{
 .booking-gallery .slick-next, .booking-gallery .slick-prev{
     top: 20px;
 }
-
 .booking-gallery .slick-prev{
     left: 10px;
-    z-index: 9999;
+    z-index: 999;
 }
 .booking-gallery .slick-next{
     right: 0px;
